--- a/code/style.css
+++ b/code/style.css
@@ -1,24 +1,25 @@
 html, body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 body {
-  background-color: rgb(221, 16, 16);
-  width: 100%;
-  background: linear-gradient();
-  font-family: Noto sans, sans-serif;
+  background-color: whitesmoke;
+  font-family: Roboto, sans-serif;
 }
 
 header {
-  background-color: rgba(11, 122, 173, 0.904);
+  background-color: rgba(11, 122, 173, 0.849);
   width: 100%;
-  height: 8em;
+  height: 8rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1em 2em;
+  padding: 2rem 2rem;
   box-sizing: border-box;
+  box-shadow: 0px 4px 3px 3px rgba(0,0,0,.2);
 }
 
 .container-with-logo-and-title {
@@ -29,17 +30,31 @@ header {
 }
 
 .logo {
-  width: 4.5rem;
-  height: 4.5rem;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
 }
 
-p, h1, h2 {
-  color: rgba(21, 3, 37, 0.692);
+.webpage-title h1 {
+  margin-block-start: 0;
+}
+
+.webpage-title h1, p {
+  color:rgb(238, 207, 207);
+}
+
+.big-text-tablet-desktop p {
+  color: rgba(24, 2, 43, 0.959);
+  font-size: 1.2rem;
+}
+
+.big-text-tablet-desktop h1 {
+  color:rgba(24, 2, 43, 0.733);
 }
 
 .hamburger-nav-mobile {
-  margin-top: 2.5em;
+  margin-top: 9rem;
+  z-index: 10;
 }
 
 #menu-toggle {
@@ -60,16 +75,31 @@ input:not(:checked) ~ #dropdown-menu {
 }
 
 .fa-bars {
-  color: white;
+  color: rgba(238, 207, 207);
 }
 
 ul {
   list-style-type: none;
 }
 
+li {
+  background-color:rgba(238, 207, 207, 0.89);
+  border-radius: 5px;
+  padding: 1rem;
+  font-size: 1rem;
+  color: rgba(24, 2, 43, 0.733);
+}
+
+.navbar-tablet-desktop {
+  display: flex;
+
+}
+
 .navbar-tablet-desktop a {
   text-decoration: none;
-  color: rgba(29, 18, 39, 0.24);
+  padding: 1em;
+  color:rgb(238, 207, 207);
+  font-size: 1.2rem;
 }
 
 .big-news-container {
@@ -82,22 +112,32 @@ ul {
   width: 90%;
   margin-top: 1.5em;
   border-radius: 5px;;
-  box-shadow: 2px 2px 4px 3px rgba(0,0,0,.1);
+  box-shadow: 4px 5px 4px 3px rgba(0,0,0,.1);
 }
 
 .big-text-tablet-desktop {
   display: flex;
   width: 50%;
-  background-color: rgb(238, 207, 207);
+  background-color: rgba(238, 207, 207, 0.7);
   border-radius: 5px;
-  margin: 1em 1em 1em 0;
-  padding: 2em;
+  box-shadow: 2px 2px 3px 3px rgba(0,0,0,.1);
   flex-direction: column;
   justify-content: center;
+  margin-right: 2rem;
+  padding: 1rem;
+  font-size: 1rem;
+}
+
+.big-text-mobile h1 {
+  color:rgba(24, 2, 43, 0.733)
+}
+
+.big-text-mobile p {
+  color:rgba(24, 2, 43, 0.733);
 }
 
 .big-text-mobile {
-  margin: 0 2em;
+  margin: 0 2.5em;
 }
 
 #check-news {
@@ -149,20 +189,33 @@ label {
   display: block;
   width: 100%;
   border-radius: 5px;
-  box-shadow: 2px 2px 4px 3px rgba(0,0,0,.1);
+  box-shadow: 4px 4px 4px 3px rgba(0,0,0,.2);
 }
 
 .small-news-link {
   text-decoration: none;
+  background-color:rgba(238, 207, 207, 0.7);
+  border-radius: 5px;
+  box-shadow: 2px 2px 3px 3px rgba(0,0,0,.1);
+}
+
+.small-news p {
+  color:rgba(24, 2, 43, 0.959);
+  font-size: 1.3rem;
 }
 
 .page-bottom {
-  background-color: powderblue;
-  width: 100%;
-  margin: 0;
-  padding: 2em;
+  background-color:rgba(11, 122, 173, 0.849);
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  font-size: 20px;
+  padding: 3rem 2rem;
+  box-shadow: 4px 4px 3px 3px rgba(0,0,0,.2);
+}
+
+.page-bottom p {
+  color:rgb(238, 207, 207);
+  font-size: 1rem;
 }
 
 a:link a:visited {
@@ -177,7 +230,10 @@ a:hover, a:active {
 
 /* mobile */
 
-@media (max-width: 667px) {
+@media (max-width: 767px) {
+  .webpage-title p {
+    display: none;
+  }
   .navbar-tablet-desktop {
     display: none;
   }
@@ -191,16 +247,24 @@ a:hover, a:active {
 
 /* tablet */
 
-@media (min-width: 668px) {
+@media (min-width: 768px) {
   header {
     padding: 5em 3em;
   }
   .hamburger-nav-mobile {
     display: none;
   }
+  .navbar-tablet-desktop a {
+    padding: 0.5rem;
+  }
+  .big-news-container {
+    gap: 1rem;
+    margin: 1rem 2.5rem 1rem 1rem;
+  }
   .big-news-image {
     width: 50%;
-    margin: 1.5em;
+    margin: 0;
+    padding: 0;
   }
   .big-text-mobile {
     display: none;
@@ -213,16 +277,19 @@ a:hover, a:active {
 
 /* desktop */
 
-@media (min-width: 1024px) {
+@media (min-width: 992px) {
   header {
     height: 10em;
     padding: 1em 2em;
+  }
+  .big-news-container {
+    margin: 1rem;
   }
   .big-text-tablet-desktop {
     font-size: 1.5rem;
   }
   .container-other-news {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
   }
 }
