--- a/code/style.css
+++ b/code/style.css
@@ -163,7 +163,6 @@ h2 {
 .cards img {
   border-radius: 16%;
 }
-
 }
 
 /* DESKTOP SIZE */
@@ -198,6 +197,16 @@ h2 {
     gap: 1rem;
     height: 500px;
   }
+
+  .card1, .card2, .card3, .card4, .card5, .card6, .card7, .card8 h3 {
+  
+  }
+
+  h3:hover {
+    background-color:lightblue;
+    color:#D96098;
+  }
+
 }
 
 
