--- a/code/style.css
+++ b/code/style.css
@@ -79,10 +79,10 @@ color: #D3DEDC;
 }
 .smallnews-container img {
   height: 55vw;
-  width: 100%;
+  width: 55vw;
 }
 .smallnews-items h1 {
-   font-weight: 200;
+   font-weight: 400;
    padding: 0 2vw 0 2vw;
    text-align: center;
 }
@@ -129,10 +129,14 @@ color: #D3DEDC;
   justify-content: center;
   align-items: center;
  }
+ .footer-icons {
+   font-size: 2vw;
+ }
  .footer-icons:hover {
   color: #D3DEDC;
  }
  .copywrite {
+   font-size: 1vw;
    font-weight: lighter;
    padding-left: 10vw;
  }
