--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,359 @@
+/* 
 html {
   background: #0025ff;
   color: #fff;
+ } */
+
+body {
+  color: #082B48;
+  font-family: Vinyl, Segoe UI, San Francisco, Roboto;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+  color: #f0f0f0;
+}
+
+a:hover{
+  opacity: 0.7;
+}
+
+.container {
+  width: 90%;
+  max-width: 980px;
+  margin: auto;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+}
+
+.clear::after {
+  content: "";
+  clear: both;
+  display:block;
+}
+
+* {
+  box-sizing:border-box;
+}
+
+/*======================
+ header 
+ =======================*/
+ .header-left {
+  float: left;
+ }
+
+ .header-right {
+   float: right;
+   text-align: center;
+ }
+
+.header-nav-logo {
+  float: left;
+  font-size: 30px;
+}
+
+.header-nav-item {
+  margin: 20px;
+  display: inline-block;
+  float: right;
+}
+
+header {
+  padding: 20px 0;
+  width: 100%;
+  background-color: #658361;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
+}
+
+.header-nav-logo img {
+ width: 96px;
+ height: 65px;
+}
+
+ .header-nav-logo a {
+   float: left;
+   font-size: 20px;
+   text-align: center;
+   font-weight: bold;
+ }
+
+.header-logo {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+
+h1 {
+  font-size: 20px;
+  align-content: center;
+  padding: 15px;
+  float: right;
+  padding-top: 3px;
+  color: white;
+}
+
+.section {
+  padding: 60px 0 20px 0;
+
+}
+.section-title {
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 40px;
+}
+/*===================
+ big-news 
+ ====================*/
+
+ .about-left {
+float: left;
+width: 65%;
+}
+.about-right {
+  float: right;
+  width: 35%;
+}
+.about-right p {
+  padding-left: 17px;
+  font-size: 17px;
+  text-align: center;
+  padding-right: 17px;
+}
+.about-left img {
+  width: 600px;
+  height: auto;
+}
+
+/* ==================
+news 
+====================*/
+.news-category {
+ margin: 5%;
+}
+
+.contents-box img {
+	display: block;
+	margin-bottom: 2rem;
+	width: 100%;
+	height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.contents box h2 {
+  margin-bottom: 2rem;
+	font-size: 2.2rem;
+	text-align: center;
+}
+
+ul {
+  display: flex;
+  justify-content: space-between; 
+  }
+
+  
+li {
+  display: flex;
+  flex-direction: column; 
+  }
+
+  * {
+  box-sizing: border-box;
+  }
+.btn {
+  margin-top: auto;
+  text-decoration: underline;
+  }
+
+ .news-wrap {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.contents-box {
+	margin-bottom: 3rem;
+  width: 23%;
+	background-color: #f0f0f0;
+  
+}
+.contents-box p {
+  margin: 5% 10%;
+}
+
+.contents-box h3 {
+  text-align: center;
+  margin: 0 10px;
+}
+
+.contents-box:hover {
+  background-color: black;
+  color: #f0f0f0;
+  cursor: pointer;
+  transform: scale(1.03);
+  transition: all 1s ease;
+}
+
+@media only screen and (max-width: 767px){
+  body {
+    width: 100%;
+  }
+/* ===========
+header
+==============*/
+header {
+  height: 120px;
+}  
+
+.header-left {
+    float: none;
+  }
+
+.header-nav-logo {
+    padding-top: 0;
+  }
+  
+.header-nav-logo h1 {
+  text-align: center;
+  padding: 0%;
+  padding-left: 3px;
+}
+.header-right {
+    float: none;
+  }
+
+.header-nav {
+    display: flex;
+    justify-content: space-between;
+  }
+
+.header-nav-item {
+    margin: 0;
+    float: none;
+    display: none;
+}
+
+/* ===========
+big-news
+==============*/
+.about-left {
+  float: none;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.about-right {
+  float: none;
+  width: 100%;
+}
+
+.about-left img {
+width: 100%;
+}
+
+/* ===========
+section common
+==============*/
+.section {
+  padding: 20px 0;
+}
+.section-title {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.section p {
+  font-size: 14px;
+}
+/* ===========
+news
+==============*/
+.news-wrap {
+  flex-wrap: wrap;
+}
+.contents-box {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+}
+@media screen and (min-width:768px) and ( max-width:1024px) {
+/* =================
+ header
+ ==================*/
+.header-left {
+  float: none;
+}
+header-title {
+  text-align: center;
+}
+.header-right {
+  float: none;
+}
+.header-nav {
+  display: flex;
+  justify-content: space-between;
+}
+.header-logo h1 {
+  display: none;
+}
+/* =================
+ big-news
+ ==================*/
+ 
+ .about-left {
+   float: none;
+   width: 100%;
+   text-align: center;
+ }
+
+ .about-right {
+   float: none;
+   width: 100%;
+ }
+ /* =================
+ news-category 
+ ==================*/
+ .news-wrap {
+   flex-wrap: wrap;
+ }
+ .contents-box {
+   width: 46%;
+ }
+}
+body {
+  width: 100%;
+}
+
+/* =================
+ footer 
+ ==================*/
+
+footer {
+  background-color: #FFF1AF;
+  color: black;
+  padding: 20px 0 20px 0;
+
+}
+
+.copyright {
+  font-size: 13px;
+  float: right;
+  margin: auto;
 }
