--- a/code/style.css
+++ b/code/style.css
@@ -9,6 +9,8 @@ body{
   font-family: 'Raleway', sans-serif;
 }
 
+/*Header and navbar*/
+
 .flex-container {
   height:75px;
   background-color:darkgrey;
@@ -46,6 +48,9 @@ a{
 a:hover {
   opacity: 0.5;
 }
+
+
+/*Big news*/
 
 .big-news {
   display: flex;
@@ -88,14 +93,15 @@ a:hover {
       font-size: 40px;
     }
 
-    .h2_{
+    h4{
       font-size: 25px;
       margin-left: 10px;
       margin-bottom: 10px;
       margin-top: 10px;
+      font-weight: normal;
     }
 
-  .h3{
+  h3{
     font-size: 25px;
     font-weight: bolder;
     margin-left: 10px;
@@ -103,6 +109,7 @@ a:hover {
     margin-top: 10px;
   }
 
+/*Small news*/
 
 .articles{
   display:flex;
@@ -128,6 +135,8 @@ a:hover {
   width:400px;
   border-radius: 20px;
 }
+
+/*Footer*/
 
 footer {
   background: darkgray;
@@ -173,6 +182,7 @@ footer {
   border-radius: 50%;
 }
 
+/*Mobile*/
 
 @media (max-width: 667px) {
 
@@ -231,6 +241,7 @@ footer {
   }
 }
 
+/*Tablet*/
 @media (max-width: 1024px) {
 
   .flex-container{
