--- a/code/style.css
+++ b/code/style.css
@@ -3,6 +3,7 @@ html, body, h1, h2, h3, p {
   padding:0;
 }
 
+/* MOBILE VIEW */
 .header {
   background: #c9c1b0;
   display: flex;
@@ -88,13 +89,10 @@ h3:hover {
   font-family: 'Bebas Neue', cursive;
 }
 
- .card1, .card2, .card3, .card4, .card5, .card6, .card7, .card8 {
+.card1, .card2, .card3, .card4, .card5, .card6, .card7, .card8 {
   background-color:white;
   font-size: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction:column;
+  text-align: center;
 }
 
 .cards img {
@@ -107,65 +105,68 @@ h3 {
   padding: 8px;
 }
 
+.footer {
+  margin-top: 20px;
+}
+
 .footer > div {
-  background: #c9c1b0;
   display: flex; 
   align-items:center;
   justify-content: center;
-  padding: 8px;
+  padding: 4px;
 }
 
 .image-credit a {
   color:#D96098;
 }
 
-/* TABLET SIZE */
+/* TABLET VIEW */
 @media (min-width: 667px) and (max-width: 1024px) {
   
- ul {
+  ul {
    display: flex;
- } 
+  } 
 
- li {
+  li {
    font-size:12px;
- }
+  }
 
-.header {
-  background-color: white;
-  justify-content:space-around;
-} 
+  .header {
+    background-color: white;
+    justify-content:space-around;
+  } 
 
-.site-name {
-  font-size: 24px;
+  .site-name {
+    font-size: 24px;
+  }
+
+  .big-card {
+    display:flex;
+    align-items:center;
+    padding: 8px;
+  }
+
+  .big-card img {
+    border-radius: 4%;
+  }
+
+  h2 {
+    color:white;
+  }
+
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1rem;
+  }
+
+  .cards img {
+    border-radius: 16%;
+  }
 }
 
-.big-card {
-  display:flex;
-  align-items:center;
-  padding: 8px;
-}
-
-.big-card img {
-  border-radius: 4%;
-}
-
-h2 {
-  color:white;
-}
-
-.cards {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 1rem;
-}
-
-.cards img {
-  border-radius: 16%;
-}
-}
-
-/* DESKTOP SIZE */
+/* DESKTOP VIEW */
 @media (min-width: 1025px) {
 
   ul {
@@ -192,21 +193,17 @@ h2 {
 
   .cards {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     grid-template-rows: repeat(4, 1fr);
+    text-align:center;
     gap: 1rem;
     height: 500px;
-  }
-
-  .card1, .card2, .card3, .card4, .card5, .card6, .card7, .card8 h3 {
-  
   }
 
   h3:hover {
     background-color:lightblue;
     color:#D96098;
   }
-
 }
 
 
