--- a/code/style.css
+++ b/code/style.css
@@ -1,241 +1,271 @@
 *{
-padding: 0;
-margin: 0;
-box-sizing: border-box;
-
-}
-body{
-  background-image: url("https://www.sciencenewsforstudents.org/wp-content/uploads/2019/11/iStock_000019745738Medium_0-772x579.jpg");
-  background-attachment: fixed;
-  background-size:100% 100%;
-  min-height: 100vh;
-}
-
-p {
-		line-height: 2rem;
-		margin: 1.5rem; 
-}
-
-/* Navbar */
-nav {
-	z-index: 10;
-	left: 0;
-	right: 0;
-	top: 0;
-	font-family: url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:ital@0;1&display=swap');
-	padding: 0 5%;
-	height: 100px;
-	background: linear-gradient(222deg, #191b1b, #736bc7, #3a09b5) fixed;
-}
-.logo {
-	float: left;
-	width: 40%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	font-size: 20px;
-	color: #fff;
-}
-nav .links {
-	float: right;
 	padding: 0;
 	margin: 0;
-	width: 60%;
-	height: 100%;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}
-nav .links li {
-	list-style: none;
-}
-nav .links a {
-	display: block;
-	padding: 10px;
-	font-size: 16px;
-	font-weight: bold;
-	color: #fff;
-	text-decoration: none;
-}
-nav .links li:hover{
-	background-color: tomato;
-	border-radius: 15px;
-	opacity: 75%;
+	box-sizing: border-box;
 	
-}
-#nav-toggle {
-	position: absolute;
-	top: -100px;
-}
-nav .icon-burger {
-	display: none;
-	position: absolute;
-	right: 5%;
-	top: 5%;
-	transform: translateY(-50%);
-}
-nav .icon-burger .line {
-	width: 30px;
-	height: 5px;
-	background-color: #fff;
-	margin: 5px;
-	border-radius: 3px;
-	transition: all .3s ease-in-out;
-}
-/* My flexbox big news*/
-
-.flexbox-container {
-	flex-direction: row;
-	font-size: 30px;
-	text-align: center;
-	 
-}
-.flexbox-img{
-	padding-top: 15px;
+	}
+	body{
+	  background-image: url("https://www.sciencenewsforstudents.org/wp-content/uploads/2019/11/iStock_000019745738Medium_0-772x579.jpg");
+	  background-attachment: fixed;
+	  background-size:100% 100%;
+	  min-height: 100vh;
+	}
+	h1{
+		color: whitesmoke;
+		text-shadow: 1px 1px black;
 	
-}
-.flexbox-text{
-justify-items: center;
-width: 100%;
-padding-top:3rem;
-}
-
-/* My Grid smaller news  */
-
-.grid-text{
-	text-align: center;
-	color: white;
-	display: grid;
-	padding: 2rem;
-}
-.grid-contanier {
-	display: grid;
-	justify-content: center;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-gap: 1.5rem;
-  }
-
-  .child-1, .child-2, .child-3, .child-4, .child-5, .child-6, .child-7, .child-8{
-	margin: 15px;
-	border-radius: 20px;
-	display: grid;
-	justify-content: center;
-	align-items: center;
-	display: grid;
-	
-  }
-  .img-1, .img-2, .img-3, .img-4, .img-5, .img-6, .img-7,.img-8, .img-flex {
-	border-radius: 30px;
-	box-shadow: 1px 1px 5px black;
-
-}
-footer  {
-background: linear-gradient(222deg, #191b1b, #736bc7, #3a09b5) fixed;
-padding:15px;
-text-align: center;}
-
-footer i:hover{
-	color:tomato;
-}
-
-
-/* Phones */
-
-@media (max-width:667px) {
-	nav .logo {
-		float: none;
-		width: auto;
+	}
+	p {
 		justify-content: center;
+		text-align: center;
+		text-shadow: 1px 1px black;
+		color: white
+	
 	}
-	nav .links {
-		float: none;
-		position: fixed;
-		z-index: 9;
-		left: 0;
-		right: 0;
-		top: 100px;
-		bottom: 100%;
-		width: auto;
-		height: auto;
-		flex-direction: column;
-		justify-content: space-evenly;
-		background-color: rgba(0,0,0,.8);
-		overflow: hidden;
-		box-sizing: border-box;
-		transition: all .5s ease-in-out;
-	}
-	nav .links a {
+	.flexbox-text p{
 		font-size: 20px;
 	}
-	nav :checked ~ .links {
-		bottom: 0;
+	/* Navbar */
+	nav {
+		z-index: 10;
+		left: 0;
+		right: 0;
+		top: 0;
+		font-family: url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:ital@0;1&display=swap');
+		padding: 0 5%;
+		height: 100px;
+		background: linear-gradient(222deg, #191b1b, #736bc7, #3a09b5) fixed;
+	}
+	
+	.logo {
+		float: left;
+		width: 40%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		font-size: 20px;
+		color: #fff;
+	}
+	.logo {
+		animation: right 10s ease infinite;
+		gap: 2rem;
+		width:8rem;
+	}
+	nav .links {
+		float: right;
+		padding: 0;
+		margin: 0;
+		width: 60%;
+		height: 100%;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+	}
+	nav .links li {
+		list-style: none;
+	}
+	
+	nav .links a {
+		display: block;
+		padding: 10px;
+		font-size: 16px;
+		font-weight: bold;
+		color: #fff;
+		text-decoration: none;
+	}
+	.grid-contanier, .flexbox-container a{
+		text-decoration: none;
+	
+	}
+	.grid-contanier a{
+		text-decoration: none;
+	}
+	#nav-toggle {
+		position: absolute;
+		top: -100px;
 	}
 	nav .icon-burger {
-		display: block;
+		display: none;
+		position: absolute;
+		right: 7%;
+		top: 7%;
+		transform: translateY(-50%);
+	}
+	nav .icon-burger .line {
+		width: 30px;
+		height: 5px;
+		background-color: #fff;
+		margin: 5px;
+		border-radius: 3px;
+		transition: all .3s ease-in-out;
+	}
+	/* My flexbox big news*/
+	
+	.flexbox-container {
+		flex-direction: row;
+		font-size: 30px;
+		text-align: center;
+		 
+	}
+	.flexbox-img{
+		padding: 15px;
+		
 	}
 	
-	.flex-container {
-		flex-direction: column;
+	/* My Grid smaller news  */
+	
+	.grid-contanier {
+		display: grid;
+		justify-content: center;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-gap: 1.5rem;
 	  }
-	  .flexbox-text{
+	
+	  .child-1, .child-2, .child-3, .child-4, .child-5, .child-6, .child-7, .child-8{
+		margin: 15px;
+		border-radius: 20px;
+		display: grid;
+		justify-content: center;
+		align-items: center;
+		display: grid;
+		
+	  }
+	  .img-1, .img-2, .img-3, .img-4, .img-5, .img-6, .img-7,.img-8, .img-flex {
+		border-radius: 30px;
+		box-shadow: 1px 1px 5px black;
+		width: 100%;
+		height: 300px;
+		object-fit: cover;
+		margin-bottom: 10px;
+	
+	}
+	/* Footer */
+	footer  {
+	background: linear-gradient(150deg, #191b1b, #736bc7, #3a09b5) fixed;
+	text-align: center;
+	padding: 5px;
+	}
+	footer i:hover{
+		color: whitesmoke;
+		}
+	footer p{
+	padding: 5px;
+	}
+	/* Phones */
+	
+	@media (max-width:667px) {
+		.logo {
+			animation: right 10s ease infinite;
+			gap: 2rem;	
+		}
+		nav .logo {
+			float: none;
+			width: 100px;
+			justify-content: left;
+		}
+		nav .links {
+			float: none;
+			position: fixed;
+			z-index: 9;
+			left: 0;
+			right: 0;
+			top: 100px;
+			bottom: 100%;
+			width: auto;
+			height: auto;
+			flex-direction: column;
+			justify-content: space-evenly;
+			background-color: rgba(0,0,0,.8);
+			overflow: hidden;
+			box-sizing: border-box;
+			transition: all .5s ease-in-out;
+		}
+		nav .links a {
+			font-size: 20px;
+		}
+		nav :checked ~ .links {
+			bottom: 0;
+		}
+		nav .icon-burger {
+			display: block;
+		}
+		.flex-container {
+			flex-direction: column;
+		  }
+		  .flexbox-text{
+			justify-items: center;
+			width: 100%;
+			}
+		.flexbox-container p{
+			padding: 10px;
+		}
+		.grid-contanier {
+		justify-items: center;
+		  display: grid;
+		  grid-template-columns: repeat(1, 1fr);
+		  grid-column: span 1;
+		}
+		p{
+			font-size: 14px;
+		line-height: 20px; 
+		flex-wrap: wrap;
+		}
+	
+	}
+	
+
+	
+	/* TABLET */
+	@media (min-width:668px){
+	
+	.flexbox-container{
+		flex-direction: column;
+	
+	}
+	.flexbox-text{
 		justify-items: center;
 		width: 100%;
-		}
-		
-
-
-	.grid-contanier {
-	justify-items: center;
-	  display: grid;
-      grid-template-columns: repeat(1, 1fr);
-      grid-column: span 1;
 	}
-	p{
-		font-size: 14px;
-    line-height: 20px; 
-    flex-wrap: wrap;
+	.grid-contanier{
+		justify-items: center;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
 	}
-
-}
-
-/* TABLET */
-@media (min-width:668px){
-
-.flexbox-container{
-	flex-direction: column;
-
-}
-.flexbox-text{
-	justify-items: center;
-	width: 100%;
-}
-.grid-contanier{
-	justify-items: center;
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-}
- 
-}
-
-
-/* DESKTOP */
-
-@media (min-width:1024px){
-
-.flexbox-container {
- display: flex;
- flex-direction: row;
- justify-content: center;
-}
-.flexbox-text{
-	justify-items: center;
-	width: 40%;
-	padding-top:3rem;
-}
-.grid-contanier{
-	justify-items: center;
-	display: grid;
-	grid-template-columns: repeat(4, 1fr)
+	 
+	}
 	
-}
-}
+	
+	/* DESKTOP */
+	
+	@media (min-width:1024px){
+	
+	.flexbox-container {
+	 display: flex;
+	 flex-direction: row;
+	 justify-content: center;
+	}
+	.flexbox-text{
+		justify-items: center;
+		width: 40%;
+		padding-top:3rem;
+	}
+	.grid-contanier{
+		justify-items: center;
+		display: grid;
+		grid-template-columns: repeat(4, 1fr)
+		
+	}
+	}
+	@keyframes right {
+		0% {
+		  transform: translateX(0%);
+		}
+	  
+		50% {
+		  transform: translateX(100%);
+		}
+	  
+		100% {
+		  transform: translateX(0%);
+		}
+	  }
