fixade responive för mobil

--- a/code/style.css
+++ b/code/style.css
@@ -201,7 +201,7 @@
 		}
 		.grid-contanier {
 		  display: grid;
-		  grid-template-columns: repeat(1, 1fr);
+		  grid-template-columns:1fr;
 		  grid-column: span 1;
 		}
 		p{
