img tablet size update

--- a/code/style.css
+++ b/code/style.css
@@ -174,6 +174,10 @@ color: #D3DEDC;
     padding-left: 3vw;
     padding-right: 3vw ;
   }
+  .smallnews-container img {
+    height: 44vw;
+    width: 44vw;
+  }
  }
  @media screen and (min-width: 1025px) {
   .smallnews-items {
