--- a/code/style.css
+++ b/code/style.css
@@ -4,10 +4,10 @@ body {
 }
 
 header {
+  position: fixed;
+  width: 100%;
   height: 4rem;
-  /* background-color: #C51D34; */
   background-color: #CF0107;
-  /* background-color:rgb(169,169,169);; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -55,8 +55,9 @@ header {
   display: grid;
   grid-template-columns: minmax(200px, 1fr) minmax(320px, 1.5fr);
   gap: 1rem;
-  margin: 1rem;
-  padding: 1rem;
+  /* margin: 1rem; */
+  /* margin: 4rem 1rem 1rem 1rem; */
+  padding: 6rem 1rem 1rem 1rem;
 }
 
 .headline-img {
@@ -172,6 +173,6 @@ p {
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
-  margin: 1rem;
+  margin: 0rem 1rem 1rem 1rem;
   }
 }
