--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,217 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background-color: #FFE6BC;
+  color: #1B1A17;
+  box-sizing: border-box;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+
+
+
+body {
+  border: 2px solid black;
+}
+
+.big-title {
+  grid-template-columns: 1fr ;
+  color: #5C3D2E;
+  font-size: 190px;
+  margin: 0;
+  font-family: 'Eczar', serif;
+  background-image: url(https://images.unsplash.com/photo-1566378246598-5b11a0d486cc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80);
+  filter: sepia(30%);
+}
+
+hr {
+  border: 1px solid black;
+  background-color: black;
+  margin-top: 0;
+}
+
+.icons {
+  display: grid;
+  grid-template-columns: 60px 60px 60px 60px;
+  justify-content: space-evenly;
+  margin-bottom: 50px;
+  color: #2D2424;
+}
+
+.facebook {
+margin: 20px;
+}
+
+.facebook:hover {
+  color:#1C6DD0;
+}
+
+.instagram {
+  margin: 20px;
+}
+
+.instagram:hover {
+  color:blueviolet;
+}
+
+.linkedin {
+ margin: 20px;
+}
+
+.linkedin:hover {
+  color:#1597E5;
+}
+
+.snapchat {
+  margin: 20px;
+}
+
+.snapchat:hover {
+  color: yellow;
+}
+
+.first-title {
+  color: #5C3D2E;
+  font-size: 50px;
+  display: inline;
+  margin-left: 50px;
+  font-family: 'Eczar', serif;
+}
+
+.first-title:hover {
+  color: white;
+}
+
+.big-news {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr 2fr);
+  margin: 50px 10px 10px 10px;
+  column-gap: 5px;
+}
+
+
+.big-img {
+  display: grid;
+  border: 1px solid darkgrey;
+  background-color: #EFEFEF;
+  padding: 15px 15px 40px 15px;
+  height: auto;
+  filter: sepia(50%);
+  margin: 3px 0 0 3px;
+  box-shadow: 2px 3px 3px darkgrey;
+}
+
+.lorem {
+  display: grid;
+  font-size: x-large;
+  padding: 130px;
+  background-color: rgb(92, 61, 46, 0.7);
+}
+
+.grid-parent {
+  height: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 10px;
+  }
+
+.first-line {
+  display: grid;
+  grid-template-columns:repeat(4, 1fr);
+  column-gap: 5px;
+}
+
+.second-line {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 5px;
+}
+
+.img-size {
+  width: 100%;
+  height: auto;
+  filter: sepia(50%);
+  box-shadow: 2px 3px 3px darkgrey;
+}
+
+.bold-title {
+  font-weight: bold;
+  padding-bottom: 10px;
+  color:#F4DFBA;
+  background-color: #5C3D2E;
+}
+
+p {
+  text-align: right;
+  margin-right: 10px;
+}
+
+@media (max-width: 600px) {
+ body {
+   flex-direction: row;
+ }
+
+ .first-line {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  row-gap: 5px;
+}
+
+.second-line {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  row-gap: 5px;
+}
+
+.first-title {
+  font-size: 25px;
+  display: inline;
+  margin-left: 30px;
+}
+
+.big-news {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+row-gap: 5px;
+}
+
+.lorem {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+
+}
+
+.big-title {
+  display: grid;
+  grid-template-columns: 1fr ;
+  font-size: 70px;
+}
+
+}
+@media (min-width:601px) and (max-width:1025px) {
+
+  .first-line {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 5px;
+  }
+
+  .big-news {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr)
+    
+  }
+  
+  .second-line {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 5px;
+  }
+
+  .big-title {
+    font-size: 100px;
+  }
+
+  .first-title {
+    font-size: 30px;
+  }
 }
