--- a/code/style.css
+++ b/code/style.css
@@ -194,7 +194,8 @@
 		  }
 		  .flexbox-text{
 			justify-items: center;
-			width: 100%;
+			padding: 15px;
+}
 			}
 		.flexbox-container p{
 			padding: 10px;
@@ -204,14 +205,6 @@
 		  grid-template-columns:1fr;
 		  grid-column: span 1;
 		}
-		p{
-			font-size: 14px;
-		line-height: 20px; 
-		flex-wrap: wrap;
-		}
-	
-	}
-	
 
 	
 	/* TABLET */
