Read more link added to all news articles

--- a/code/style.css
+++ b/code/style.css
@@ -138,6 +138,14 @@ p {
   line-height: 130%;
 }
 
+.read-more {
+  font-size: 90%;
+  font-weight: lighter;
+  text-transform: uppercase;
+  padding: 0rem 0.25rem;
+  color: black;
+}
+
 /* Desktop elements that should behave differently */
 @media (min-width: 992px) {
   .navbar-links{
