--- a/code/style.css
+++ b/code/style.css
@@ -73,13 +73,7 @@
 		color: #fff;
 		text-decoration: none;
 	}
-	.grid-contanier, .flexbox-container a{
-		text-decoration: none;
-	
-	}
-	.grid-contanier a{
-		text-decoration: none;
-	}
+
 	#nav-toggle {
 		position: absolute;
 		top: -100px;
@@ -87,8 +81,8 @@
 	nav .icon-burger {
 		display: none;
 		position: absolute;
-		right: 7%;
-		top: 7%;
+		right: 50px;
+		top: 50px;
 		transform: translateY(-50%);
 	}
 	nav .icon-burger .line {
@@ -111,13 +105,17 @@
 		padding: 15px;
 		
 	}
-	
-	/* My Grid smaller news  */
-	
+		/* My Grid smaller news  */
+	.grid-contanier, .flexbox-container a{
+		text-decoration: none;
+	}
+	.grid-contanier a{
+		text-decoration: none;
+	}
 	.grid-contanier {
 		display: grid;
 		justify-content: center;
-		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-template-columns:auto auto auto auto;
 		grid-gap: 1.5rem;
 	  }
 	
@@ -153,7 +151,7 @@
 	}
 	/* Phones */
 	
-	@media (max-width:667px) {
+	@media screen and (max-width:667px) {
 		.logo {
 			animation: right 10s ease infinite;
 			gap: 2rem;	
