--- a/code/style.css
+++ b/code/style.css
@@ -193,7 +193,7 @@ h3 {
 
   .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     text-align:center;
     gap: 1rem;
