--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,197 @@
-html {
-  background: #0025ff;
-  color: #fff;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+
+*{
+  box-sizing: border-box;
 }
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background: #E6E6E6;
+  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+}
+
+
+/* Navigation */
+
+.nav-bar { 
+  background: white;
+  margin: 0;
+  padding: 1rem 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 80px;
+  width: 100%;
+}
+
+.nav-item {
+  list-style: none;
+  margin-right: 2rem;
+}
+
+.nav-item a {
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+  font-size: 18px;
+  transition: all 150ms ease-in;
+}
+
+.nav-item a:hover {
+  color: #D1CDCB;
+}
+
+.logo {
+  margin-right: auto;
+  margin-left: 2rem;
+  cursor: pointer;
+  display: flex;
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+/* Button */
+
+button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  background: #E6E6E6;
+  border: none;
+  border-radius: 20px;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+button:hover {
+  background: rgb(209, 205, 203);
+  transition: all 150ms ease-in;
+}
+
+
+/* Big news hero */
+
+.big-news {
+  width: 100vw;
+  height: 100vh;
+  margin-bottom: 10px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-image: url("./images/lamp.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.big-news h1 {
+  font-size: 3em;
+  font-weight: 500;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.hero {
+  position: relative;
+  color: white;
+  text-align: center;
+}
+
+
+/* Small news */
+
+.small-news {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.article {
+  background: white;
+  padding: 20px;
+  margin: 10px;
+}
+
+.article img {
+  width: 100%;
+  height:200px;
+  overflow: hidden;
+  object-fit: cover; 
+}
+
+.article:hover {
+  cursor: pointer;
+  box-shadow: 5px 5px #BAB3AF;
+  transition: all 150ms ease-in;
+}
+
+h2 {
+  font-weight: 500;
+}
+
+/* Footer */
+
+footer {
+  background: white;
+  text-align: center;
+  font-size: 14px;
+  height: 40px;
+  width: 100%;
+  padding-top: 10px;
+  margin-top: 10px;
+}
+
+
+/* Media query tablet */
+
+@media screen and (max-width: 1024px) {
+
+	.small-news {
+    flex-wrap: wrap;
+  }
+  
+  .article {
+    width: 45%;
+  }
+}
+
+/* Media query phone */
+
+@media screen and (max-width: 768px) {
+
+   .nav-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+  }
+
+  .logo {
+    text-align: center;
+    margin: auto;
+    padding-bottom: 20px;
+  }
+
+  .nav-item {
+    margin: 10px;
+  }
+ 
+  .small-news {
+    flex-wrap: wrap;
+  }
+
+  .article {
+    width: 100%;
+  }
+}
+
+ 
