--- a/code/style.css
+++ b/code/style.css
@@ -150,8 +150,9 @@ grid-gap: 15px;
 .blog-post img{
   object-fit: cover;
   width: 80%;
-  max-height: 100%;
-  padding: 1rem;
+  max-height: 70%;
+  padding-top: 1rem;
+  margin: 1em;
 }
 
 .blog-post {
